Added dynamic navigation bar

--- a/AD/ad.html
+++ b/AD/ad.html
@@ -1,11 +1,19 @@
 <html>
     <head>
         <title>Business Industry</title>
-    <link rel="stylesheet" href="ad.css">
+        <link rel="stylesheet" href="ad.css" />
+        <link rel="stylesheet" href="/nav.css" />
     </head>
-
     <body>
+        <div class="menu-bar"></div>
+        <script src="/nav.js"></script>
         <div class="banner">
-        <section id="destinations">
-            <div class="title-text">
-                <p>ADS</p>
+            <section id="destinations">
+                <div class="title-text">
+                    <p>ADS</p>
+                </div>
+            </section>
+        </div>
+        <script src="/userCheck.js"></script>
+    </body>
+</html>
