--- a/Contact us/contact.html
+++ b/Contact us/contact.html
@@ -14,8 +14,11 @@
         />
 
         <link rel="stylesheet" href="contact.css" />
+        <link rel="stylesheet" href="/nav.css" />
     </head>
     <body>
+        <div class="menu-bar"></div>
+        <script src="/nav.js"></script>
         <div class="container">
             <form
                 id="contact-form"
@@ -51,15 +54,9 @@
                     rows="4"
                     placeholder="How can we Help You?"
                 ></textarea>
-                <!--<button type="submit">Send</button>-->
-                <a href="">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Submit
-                </a>
+                <button type="submit">Send</button>
             </form>
         </div>
+        <script src="/userCheck.js"></script>
     </body>
 </html>
