--- a/Experts/cexpert.html
+++ b/Experts/cexpert.html
@@ -3,8 +3,12 @@
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <title>Seniors</title>
         <link rel="stylesheet" href="cexpert.css">
+        <link rel="stylesheet" href="/nav.css" />
     </head>
     <body>
+        <div class="menu-bar"></div>
+        <script src="/nav.js"></script>
+        <script src="/userCheck.js"></script>
         <div class="container">
           
             <div class="card1" data-tilt>
