--- a/Zones/czone.html
+++ b/Zones/czone.html
@@ -2,9 +2,12 @@
     <head>
         <title>Computer Industry</title>
     <link rel="stylesheet" href="czone.css">
-    </head>
-
-    <body>
+    <link rel="stylesheet" href="/nav.css" />
+</head>
+<body>
+    <div class="menu-bar"></div>
+    <script src="/nav.js"></script>
+    <script src="/userCheck.js"></script>
         <div class="banner">
         <section id="destinations">
             <div class="title-text">
