--- a/login/login.html
+++ b/login/login.html
@@ -13,8 +13,11 @@
             href="https://fonts.googleapis.com/css2?family=Gruppo&family=Righteous&family=Turret+Road:wght@500;700&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="/nav.css" />
     </head>
     <body>
+        <div class="menu-bar"></div>
+        <script src="/nav.js"></script>
         <!--form section-->
         <section class="header">
             <nav>
@@ -68,7 +71,12 @@
                             </button>
                         </div>
                         <!--login box-->
-                        <form id="login" class="i-g-l">
+                        <form
+                            method="POST"
+                            action="/formControl/loginCheck.php"
+                            id="login"
+                            class="i-g-l"
+                        >
                             <input
                                 type="text"
                                 class="inputs"
@@ -96,6 +104,7 @@
                         <form
                             id="register"
                             action="/formControl/registerUser.php"
+                            method="POST"
                             class="i-g-r"
                         >
                             <input
