--- a/src/aboutusmobile/aboutus.html
+++ b/src/aboutusmobile/aboutus.html
@@ -36,7 +36,7 @@
                 <div class="usrow">
                     <div class="uscol">
                         <div class="usimg-box">
-                            <img src="images/01.jpg" class="us-image anim" />
+                            <img src="img/ruvindi.jpg" class="us-image anim" />
                             <ul>
                                 <a href=""
                                     ><li>
