--- a/src/aboutusmobile/aboutus.html
+++ b/src/aboutusmobile/aboutus.html
@@ -68,7 +68,7 @@
 
                     <div class="uscol">
                         <div class="usimg-box">
-                            <img src="images/01.jpg" class="us-image anim" />
+                            <img src="img/IMG_7760.jpg" class="us-image anim" />
                             <ul>
                                 <a href=""
                                     ><li>
