--- a/src/aboutusmobile/aboutus.html
+++ b/src/aboutusmobile/aboutus.html
@@ -36,38 +36,6 @@
                 <div class="usrow">
                     <div class="uscol">
                         <div class="usimg-box">
-                            <img src="img/ruvindi.jpg" class="us-image anim" />
-                            <ul>
-                                <a href=""
-                                    ><li>
-                                        <img
-                                            src="images/fb.jpg"
-                                            class="usicon anim"
-                                        /></li
-                                ></a>
-                                <a href=""
-                                    ><li>
-                                        <img
-                                            src="images/insta.jpg"
-                                            class="usicon anim"
-                                        /></li
-                                ></a>
-                                <a href=""
-                                    ><li>
-                                        <img
-                                            src="images/wapp.jpg"
-                                            class="usicon anim"
-                                        /></li
-                                ></a>
-                            </ul>
-                        </div>
-                        <h2 class="anim">Ruvindi Maniyo</h2>
-                        <h3 class="anim">undergraduate</h3>
-                        <p class="anim">NSBM Faculty of Computing</p>
-                    </div>
-
-                    <div class="uscol">
-                        <div class="usimg-box">
                             <img src="img/IMG_7760.jpg" class="us-image anim" />
                             <ul>
                                 <a href=""
@@ -100,7 +68,39 @@
 
                     <div class="uscol">
                         <div class="usimg-box">
-                            <img src="img/vithuni.png" class="us-image anim" />
+                            <img src="img/ruvindi.jpg" class="us-image anim" />
+                            <ul>
+                                <a href=""
+                                    ><li>
+                                        <img
+                                            src="images/fb.jpg"
+                                            class="usicon anim"
+                                        /></li
+                                ></a>
+                                <a href=""
+                                    ><li>
+                                        <img
+                                            src="images/insta.jpg"
+                                            class="usicon anim"
+                                        /></li
+                                ></a>
+                                <a href=""
+                                    ><li>
+                                        <img
+                                            src="images/wapp.jpg"
+                                            class="usicon anim"
+                                        /></li
+                                ></a>
+                            </ul>
+                        </div>
+                        <h2 class="anim">Ruvindi Maniyo</h2>
+                        <h3 class="anim">undergraduate</h3>
+                        <p class="anim">NSBM Faculty of Computing</p>
+                    </div>
+
+                    <div class="uscol">
+                        <div class="usimg-box">
+                            <img src="img/tharushi.jpg" class="us-image anim" />
                             <ul>
                                 <a href=""
                                     ><li>
@@ -135,7 +135,7 @@
                         <div class="uscol">
                             <div class="usimg-box">
                                 <img
-                                    src="images/01.jpg"
+                                    src="img/prabasha.jpg"
                                     class="us-image anim"
                                 />
                                 <ul>
@@ -170,7 +170,7 @@
                         <div class="uscol">
                             <div class="usimg-box">
                                 <img
-                                    src="images/01.jpg"
+                                    src="img/nethmi.jpg"
                                     class="us-image anim"
                                 />
                                 <ul>
@@ -205,7 +205,7 @@
                         <div class="uscol">
                             <div class="usimg-box">
                                 <img
-                                    src="images/01.jpg"
+                                    src="img/nipuni.jpg"
                                     class="us-image anim"
                                 />
                                 <ul>
@@ -242,7 +242,7 @@
                             <div class="uscol">
                                 <div class="usimg-box">
                                     <img
-                                        src="images/01.jpg"
+                                        src="img/vithuni.jpg"
                                         class="us-image anim"
                                     />
                                     <ul>
