--- a/src/aboutusmobile/aboutus.html
+++ b/src/aboutusmobile/aboutus.html
@@ -61,7 +61,7 @@
                                 ></a>
                             </ul>
                         </div>
-                        <h2 class="anim">Ruvindi Maniyo</h2>
+                        <h2 class="anim">Shannon Nanayakkara</h2>
                         <h3 class="anim">undergraduate</h3>
                         <p class="anim">NSBM Faculty of Computing</p>
                     </div>
@@ -93,7 +93,7 @@
                                 ></a>
                             </ul>
                         </div>
-                        <h2 class="anim">Ruvindi Maniyo</h2>
+                        <h2 class="anim">Ruvindi Wickramasinghe</h2>
                         <h3 class="anim">undergraduate</h3>
                         <p class="anim">NSBM Faculty of Computing</p>
                     </div>
@@ -125,7 +125,7 @@
                                 ></a>
                             </ul>
                         </div>
-                        <h2 class="anim">Ruvindi Maniyo</h2>
+                        <h2 class="anim">Tharushi Rodrigo</h2>
                         <h3 class="anim">undergraduate</h3>
                         <p class="anim">NSBM Faculty of Computing</p>
                     </div>
@@ -197,7 +197,7 @@
                                     ></a>
                                 </ul>
                             </div>
-                            <h2 class="anim">Ruvindi Maniyo</h2>
+                            <h2 class="anim">Nethmi Jayalath</h2>
                             <h3 class="anim">undergraduate</h3>
                             <p class="anim">NSBM Faculty of Computing</p>
                         </div>
@@ -232,7 +232,7 @@
                                     ></a>
                                 </ul>
                             </div>
-                            <h2 class="anim">Ruvindi Maniyo</h2>
+                            <h2 class="anim">Vithuni Rodrigo</h2>
                             <h3 class="anim">undergraduate</h3>
                             <p class="anim">NSBM Faculty of Computing</p>
                         </div>
