--- a/src/aboutusmobile/aboutus.html
+++ b/src/aboutusmobile/aboutus.html
@@ -232,7 +232,7 @@
                                     ></a>
                                 </ul>
                             </div>
-                            <h2 class="anim">Vithuni Rodrigo</h2>
+                            <h2 class="anim">Prabasha Hunukumbura</h2>
                             <h3 class="anim">undergraduate</h3>
                             <p class="anim">NSBM Faculty of Computing</p>
                         </div>
@@ -269,7 +269,7 @@
                                         ></a>
                                     </ul>
                                 </div>
-                                <h2 class="anim">Ruvindi Maniyo</h2>
+                                <h2 class="anim">Vithuni Rodrigo</h2>
                                 <h3 class="anim">undergraduate</h3>
                                 <p class="anim">NSBM Faculty of Computing</p>
                             </div>
