--- a/src/aboutusmobile/aboutus.html
+++ b/src/aboutusmobile/aboutus.html
@@ -162,7 +162,7 @@
                                     ></a>
                                 </ul>
                             </div>
-                            <h2 class="anim">Ruvindi Maniyo</h2>
+                            <h2 class="anim">Prabasha Hunukumbura</h2>
                             <h3 class="anim">undergraduate</h3>
                             <p class="anim">NSBM Faculty of Computing</p>
                         </div>
@@ -232,7 +232,7 @@
                                     ></a>
                                 </ul>
                             </div>
-                            <h2 class="anim">Prabasha Hunukumbura</h2>
+                            <h2 class="anim">Nipuni Vishmika</h2>
                             <h3 class="anim">undergraduate</h3>
                             <p class="anim">NSBM Faculty of Computing</p>
                         </div>
