--- a/src/Seniors/bsenior.html
+++ b/src/Seniors/bsenior.html
@@ -13,12 +13,9 @@
         <script src="/nav.js"></script>
         <div class="container">
             <div class="card1" data-tilt>
-                <img src="minsara.jpg" />
-                <h2>J.A.Minsara Sharindi</h2>
-                <p>
-                    BSc (Honours) Software Engineering degree (University of
-                    Plymouth, United Kingdom)
-                </p>
+                <img src="vishmi.jpg" />
+                <h2>Vishmi Hettiwatthage</h2>
+                <p>BSc (Hons) International Management and Business affiliated with Plymouth University<br>Batch: 19.2</p>
             </div>
             <div class="card2" data-tilt>
                 <img src="weerasingha.jpg" />
