--- a/src/AD/ad.html
+++ b/src/AD/ad.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Business Industry</title>
+        <title>ADS</title>
         <link rel="stylesheet" href="ad.css" />
         <link rel="stylesheet" href="/nav.css" />
     </head>
