added (mobile) sectors and bg images

--- a/src/mobile/ads.html
+++ b/src/mobile/ads.html
@@ -14,13 +14,17 @@
 			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="customization.css" />
+
 		<title>Ads - Green Connect</title>
 	</head>
-	<body class="container">
+	<body
+		id="ads"
+		class="container">
 		<nav id="topNav"></nav>
-		<main class="container">
-			<h1>Hello, world!</h1>
-		</main>
+		<main class="container"></main>
 		<script src="./js/navigation.js"></script>
 		<script src="./js/userCheck.js"></script>
 	</body>
