--- a/src/mobile/register.html
+++ b/src/mobile/register.html
@@ -14,9 +14,15 @@
 			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="customization.css" />
+
 		<title>Register - Green Connect</title>
 	</head>
-	<body class="container">
+	<body
+		id="register"
+		class="container">
 		<nav id="topNav"></nav>
 		<main class="container">
 			<h2>Welcome new user! Please fill the form below to register</h2>
