--- a/src/mobile/aboutus.html
+++ b/src/mobile/aboutus.html
@@ -14,9 +14,15 @@
 			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="customization.css" />
+
 		<title>About Us - Green Connect</title>
 	</head>
-	<body class="container">
+	<body
+		id="about"
+		class="container">
 		<nav id="topNav"></nav>
 		<article>
 			We are seven passionate Software Engineering undergraduates at
