--- a/src/mobile/institution.html
+++ b/src/mobile/institution.html
@@ -14,9 +14,15 @@
 			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="customization.css" />
+
 		<title>Institution - Green Connect</title>
 	</head>
-	<body class="container">
+	<body
+		id="institution"
+		class="container">
 		<nav id="topNav"></nav>
 		<div class="grid">
 			<img
