--- a/src/zones(new)/zone.html
+++ b/src/zones(new)/zone.html
@@ -4,10 +4,11 @@
         <title>Zones</title>
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="zone.css">
-        <link rel="stylesheet" href="nav.css" />
+        <link rel="stylesheet" href="/nav.css" />
     </head>
     <body>
         <div class="banner">
+            <script src="/nav.js"></script>
             <section id="destinations">
                 <div class="title-text">
                     <p>Welcome to Green Connect Zones</p><br><br>
@@ -183,5 +184,6 @@
 
         </div>
        </section>
+       <script src="/userCheck.js"></script>
     </body>
 </html>
